@@ -1,11 +1,10 @@
 [entity-name]
-very-big-electric-pole=Very big electric pole
+po-very-big-electric-pole=Very big electric pole
 po-transformer=Transformer
-hidden-electric-pole-in=Transformer Input
-hidden-electric-pole-out=Transformer Output
+po-hidden-electric-pole-in=Transformer Input
+po-hidden-electric-pole-out=Transformer Output
 
 [entity-description]
-small-electric-pole=Max consumption: 20MW
 po-electric-pole-consumption=[font=default-semibold][color=255, 230, 192]Max consumption:[/color][/font] __1__
 po-electric-pole-consumption-append=__1__\n[font=default-semibold][color=255, 230, 192]Max consumption:[/color][/font] __2__
 po-transformer=Separates electric networks from each other
